--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>About Awele</title>
   </head>
 
@@ -19,7 +19,7 @@
     <section class="main-container">
       <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Awele Nwabuzor</a>
+          <a class="navbar-brand" href="#">Awele Nwabuzor </a>
           <button
             class="navbar-toggler"
             type="button"
@@ -41,7 +41,9 @@
         </div>
       </nav>
       <div class="about-text">
-        <a href="index.html" class="homepage-link">Back to homepage</a>
+        <a href="index.html" class="homepage-link" title="homepage"
+          >Back to homepage</a
+        >
         <h1 class="about-me">About me</h1>
         <h3 class="front">Front-end developer from Owerri, Nigeria</h3>
 
@@ -56,26 +58,30 @@
         <div class="row">
           <div class="col-sm-4 col-md-4">
             <div class="about-box border shadow-sm p-4 mb-3">
-              <img src="./images/yoga.png" />
+              <img src="./images/yoga.png" alt="yoga image" />
             </div>
           </div>
 
           <div class="col-sm-4 col-md-4">
             <div class="about-box border shadow-sm p-4 mb-3">
-              <img src="./images/weather.png" />
+              <img src="./images/weather.png" alt="weather image" />
             </div>
           </div>
 
           <div class="col-sm-4 col-md-4">
             <div class="about-box border shadow-sm p-4 mb-3">
-              <img src="./images/yogurt.png" />
+              <img src="./images/yogurt.png" alt="yogurt image" />
             </div>
           </div>
         </div>
       </div>
       <div id="contact">
         <h2>📮 Contact me</h2>
-        <a href="mailto:nwabuzorawele$2@gmail.com" class="email-link">
+        <a
+          href="mailto:nwabuzorawele$2@gmail.com"
+          class="email-link"
+          title="email me"
+        >
           nwabuzorawele42@gmail.com
         </a>
       </div>
