--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Awele</title>
+    <title>sheCodes: mobile responsive project</title>
+    <meta
+      name="description"
+      content="My sheCodes week 3 project on mobile responsiveness and SEO optimization"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -42,15 +46,17 @@
       <h1>Awele Nwabuzor</h1>
       <h3>🇳🇬 Front-end developer, based in Nigeria</h3>
       <div class="navigation-links">
-        <a href="about.html#contact" class="contact-link">Contact me</a>
-        <a href="about.html" class="about-link">About me</a>
+        <a href="about.html#contact" class="contact-link" title="contact me"
+          >Contact me</a
+        >
+        <a href="about.html" class="about-link" title="about me">About me</a>
       </div>
       <section class="bod">
         <div class="container">
           <div class="row">
             <div class="col-sm-6">
               <div class="image-box m-auto">
-                <img src="./images/yoga.png" />
+                <img src="./images/yoga.png" alt="yoga image" />
               </div>
             </div>
             <div class="col-sm-6">
@@ -90,7 +96,7 @@
             </div>
             <div class="col-sm-6">
               <div class="image-box m-auto">
-                <img src="./images/weather.png" />
+                <img src="./images/weather.png" alt="weather image" />
               </div>
             </div>
           </div>
@@ -100,7 +106,7 @@
           <div class="row">
             <div class="col-sm-6">
               <div class="image-box m-auto">
-                <img src="./images/yogurt.png" />
+                <img src="./images/yogurt.png" alt="yogurt image" />
               </div>
             </div>
             <div class="col-sm-6">
